--- a/sub1_1.html
+++ b/sub1_1.html
@@ -106,7 +106,7 @@
     
 
     <section id="title_img">
-        <h2>커피명가</h2>
+        <h2>커피명가 소개</h2>
         <img src="./images/sub1_1_title.png" alt="banner">
     </section>
 
