--- a/sub2_2.html
+++ b/sub2_2.html
@@ -51,13 +51,13 @@
           </ul>
         </li>
         <li><a href="sub2_2.html">메뉴</a>
-          <ul class="depth2">
+          <ul class="depth2 sub2">
             <li><a href="sub2_2.html">커피</a></li>
-            <li><a href="#">소프트 드링크</a></li>
-            <li><a href="#">티</a></li>
-            <li><a href="#">디저트</a></li>
-            <li><a href="#">베이커리</a></li>
-            <li><a href="#">MD</a></li>
+            <li><a href="sub2_2.html">소프트 드링크</a></li>
+            <li><a href="sub2_2.html">티</a></li>
+            <li><a href="sub2_2.html">디저트</a></li>
+            <li><a href="sub2_2.html">베이커리</a></li>
+            <li><a href="sub2_2.html">MD</a></li>
           </ul>
         </li>
         <li><a href="#">SHOP</a>
@@ -118,28 +118,27 @@
     </ul>
   </div>
 
-
-
   <div class="location">
     <span>Home&nbsp;</span> &gt;
     <span>&nbsp;메뉴&nbsp;</span> &gt;
     <span>&nbsp;커피</span>
   </div>
 
-  <section id="menu">
+  <section id="allMenu1" class="">
+    <section id="menu1">
       <div class="menu_nav">
         <a href="#">TOP</a>
       </div>
 
-    <div id="coffee">
-      <h1>핸드드립 커피</h1>
-      <div class="dash"></div>
-      <p><span>'Farm to Cup'<br>
-          커피명가 독점 농장에서 공급받은 신선한 그린 빈을<br>
-          매일 로스팅 해 산지별 개성을 오롯이 담아 섬세하고<br>
-          풍부한 풍미를 가졌습니다.
-        </span></p>
-    </div>
+      <div class="main_title_text">
+        <h1>핸드드립 커피</h1>
+        <div class="dash1"></div>
+        <p><span>'Farm to Cup'<br>
+            커피명가 독점 농장에서 공급받은 신선한 그린 빈을<br>
+            매일 로스팅 해 산지별 개성을 오롯이 담아 섬세하고<br>
+            풍부한 풍미를 가졌습니다.
+          </span></p>
+      </div>
       <div id="drip">
       </div>
       <div id="drip_logo">
@@ -182,13 +181,13 @@
           </article>
         </div>
       </div>
-      <div id="espresso">
-      <h1>에스프레소 & 베리에이션</h1>
-      <div class="dash"></div>
-      <p><span>오직 스페셜티 커피만을 넣은<br>
-        커피명가의 에스프레소 블렌드로<br>
-        가장 맛있는 커피를 만듭니다.
-        </span></p>
+      <div class="main_title_text">
+        <h1>에스프레소 & 베리에이션</h1>
+        <div class="dash2"></div>
+        <p><span>오직 스페셜티 커피만을 넣은<br>
+            커피명가의 에스프레소 블렌드로<br>
+            가장 맛있는 커피를 만듭니다.
+          </span></p>
       </div>
       <ul>
         <li><a href="#"><img src="./image_menu/americano.png" alt="아메리카노">
@@ -198,73 +197,339 @@
         <li><a href="#"><img src="./image_menu/malca.png" alt="말차 명가치노">
             말차 명가치노</a></li>
         <li><a href="#"><img src="./image_menu/mintchoco.jpg" alt="민트초코카푸치노">
-          민트초코카푸치노</a></li>
+            민트초코카푸치노</a></li>
         <li><a href="#"><img src="./image_menu/iced.png" alt="아이스 명가치노">
-          아이스 명가치노</a></li>
+            아이스 명가치노</a></li>
         <li><a href="#"><img src="./image_menu/evergreen-ice.png" alt="아이스 말차 명가치노">
             아이스 말차 명가치노</a></li>
       </ul>
     </section>
-    <section>
-        <div class="menu_list">
-          <ul>
-            <li>ㆍ에스프레소</li>            <li>ㆍ아메리카노&nbsp;&nbsp;&nbsp;</li>
-            <li>ㆍ카페라떼&nbsp;&nbsp;&nbsp;</li>
-            <li>ㆍ바닐라 라떼</li>
-            <li>ㆍ솔티드 캐러멜라떼</li>
-          </ul>
-          <ul>
-            <li>ㆍ명가치노&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-            <li>ㆍ카푸치노</li>
-            <li>ㆍ캐러멜 마끼아또</li>
-            <li>ㆍ카페모카</li>
-            <li>ㆍ솔티드 캐러멜명가치노</li>
-          </ul>
-          <ul>
-            <li>ㆍ말차 명가치노</li>
-            <li>ㆍ민트 초코 카푸치노</li>
-            <li >ㆍ티라미수 라떼<br> &nbsp;&nbsp;&nbsp;(season)</li>
-            <li id="blank1">ㆍ아포가토</li>
-          </ul>
-          <div id="add_text">
+    <section class="inMenu">
+      <div class="menu_list">
+        <ul>
+          <li>ㆍ에스프레소</li>
+          <li>ㆍ아메리카노&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ카페라떼&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ바닐라 라떼</li>
+          <li>ㆍ솔티드 캐러멜라떼</li>
+        </ul>
+        <ul>
+          <li>ㆍ명가치노&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ카푸치노</li>
+          <li>ㆍ캐러멜 마끼아또</li>
+          <li>ㆍ카페모카</li>
+          <li>ㆍ솔티드 캐러멜명가치노</li>
+        </ul>
+        <ul id="move_r">
+          <li>ㆍ말차 명가치노</li>
+          <li>ㆍ민트 초코 카푸치노</li>
+          <li>ㆍ티라미수 라떼<br> &nbsp;&nbsp;&nbsp;(season)</li>
+          <li class="blank1">ㆍ아포가토</li>
+        </ul>
+        <div id="add_text">
           <p>*실제 제공되는 메뉴는 이미지와 다를 수 있습니다.</p>
           <p>*일부 패밀리숍에 한하여 가격이 상이할 수 있습니다.</p>
         </div>
-        </div>
+      </div>
+    </section>
   </section>
-<footer id="main_footer">
-  <div id="ft_img">
-    <a href="./"><img src="./images/logo-myungga.jpg" alt="logo"></a>
-  </div>
-  <div id="footer_tt">
-  <ul id="mf_text1" class="mf_text">
-    <li><h3><a href="sub1_1.html">회사소개</a></h3></li>
-    <li><h3><a href="#">제휴/제안</a></h3></li>
-    <li><h3><a href="#">이용약관</a></h3></li>
-    <li><h3><a href="#"><strong>개인정보처리방침</strong></a></h3></li>
-  </ul>
-  <ul id="mf_text2" class="mf_text">
-    <li><p>(주)커피명가 대표자 : 안명규</p></li>
-    <li><p>개인정보관리책임 : 안명규</p></li>
-    <li><p>사업자등록번호 : 504-81-58075</p></li>
-  </ul>
-  <ul id="mf_text3" class="mf_text">
-    <li><p>통신판매업신고번호 : 제2009-대구중구-1940호 대구 중구 동덕로26길 104</p></li>
-  </ul>
-  <ul id="mf_text4" class="mf_text">
-    <li><p>문의 : 053-254-0892</p></li>
-    <li><p>admin@coffeemg.bizmeka.com</p></li>
-    <li><p>&copy; Coffee Myungga. All Rights Reserved</p></li>
-  </ul>
-  <!-- <ul id="mf_text5" class="mf_text">
+
+  <section id="allMenu2" class="hide">
+    <section id="menu2">
+      <div class="menu_nav">
+        <a href="#">TOP</a>
+      </div>
+
+      <div class="main_title_text">
+        <h1>소프트 드링크</h1>
+        <div class="dash2"></div>
+        <p><span>계절이 바뀔 때마다 산지에서 찾은<br>
+            가장 맛있는 재료를 정성 가득 담아<br>
+            각 패밀리숍에서 직접 만드는 홈메이드 음료
+          </span></p>
+      </div>
+      <ul>
+        <li><a href="#"><img src="./image_menu/green-cacao.png" alt="말차 카카오">
+            말차 카카오</a></li>
+        <li><a href="#"><img src="./image_menu/elder-flower-ade.png" height="242.2" alt="엘더플라워에이드">
+            엘더플라워에이드</a></li>
+        <li><a href="#"><img src="./image_menu/avocado.jpg" alt="아보카도망고플래쉬">
+            아보카도망고플래쉬</a></li>
+        <li><a href="#"><img src="./image_menu/sweetpotatolatte.jpg" alt="고구마 라떼">
+            고구마 라떼</a></li>
+        <li><a href="#"><img src="./image_menu/matcharedbeanlatte.jpg" alt="말차 팥라테">
+            말차 팥라떼</a></li>
+        <li><a href="#"><img src="./image_menu/peach-green.jpg" alt="피치그린플래쉬">
+            피치그린플래쉬</a></li>
+      </ul>
+    </section>
+    <section class="inMenu">
+      <div class="menu_list">
+        <ul>
+          <li>ㆍ리얼 쇼콜라</li>
+          <li>ㆍ말차 카카오&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ말차 라떼&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ말차 팥라떼&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ고구마 라떼</li>
+        </ul>
+        <ul>
+          <li>ㆍ블루베리 요거트 스무디</li>
+          <li>ㆍ딸기 스무디&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ말차 플래쉬</li>
+          <li>ㆍ말차 아포가토</li>
+          <li>ㆍ엘더플라워 에이드</li>
+        </ul>
+        <ul>
+          <li>ㆍ아보카도망고플래쉬</li>
+          <li>ㆍ피치그린플래쉬</li>
+          <li>ㆍ생애플망고카푸치노<br> &nbsp;&nbsp;&nbsp;(season)</li>
+          <li class="blank1">ㆍ생과일 요거트</li>
+          <li>ㆍ생과일에이드레몬/<br> &nbsp;&nbsp;&nbsp;오렌지/자몽</li>
+          <li class="blank1">ㆍ생과일주스 토마토/키위/<br> &nbsp;&nbsp;&nbsp;바나나/딸기</li>
+
+        </ul>
+        <div id="add_text1">
+          <p>*실제 제공되는 메뉴는 이미지와 다를 수 있습니다.</p>
+          <p>*일부 패밀리숍에 한하여 가격이 상이할 수 있습니다.</p>
+        </div>
+      </div>
+    </section>
+  </section>
+
+  <section id="allMenu3" class="hide">
+    <section id="menu3">
+      <div class="menu_nav">
+        <a href="#">TOP</a>
+      </div>
+
+      <div class="main_title_text">
+        <h1>티</h1>
+        <div class="dash2"></div>
+        <p><span>엄선된 재료로 만드는<br>커피명가만의 홈메이드 티는<br>
+            차별화된 풍부한 향과 맛을 드립니다.
+          </span></p>
+      </div>
+      <ul>
+        <li><a href="#"><img src="./image_menu/tea-copy.png" alt="허니 진저 오렌지 티">
+            허니 진저 오렌지 티</a></li>
+        <li><a href="#"><img src="./image_menu/omija.png" alt="수제 오미자 차">
+            수제 오미자 차</a></li>
+        <li><a href="#"><img src="./image_menu/snowicetea.png" alt="스노우 아이스 티">
+            스노우 아이스 티</a></li>
+      </ul>
+    </section>
+    <section class="inMenu">
+      <div class="menu_list">
+        <ul>
+          <li>ㆍ수제 오미자 차</li>
+          <li>ㆍ허니 진저 오렌지 티<br>&nbsp;&nbsp;&nbsp;(season)</li>
+          <li class="blank1">ㆍ유자차 &nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ가을 국화차</li>
+          <li>ㆍ허니 레몬 티</li>
+          <li>ㆍ스노우 아이스 티<br>&nbsp;&nbsp;&nbsp;(season)</li>
+        </ul>
+        <div id="tea_menu">
+          <ul>
+            <li>ㆍ로네펠트 티<br><br>
+              &nbsp;&nbsp;&nbsp;Earl Grey / English Breakfast / Darjeeling <br>
+              &nbsp;&nbsp;&nbsp;Chamomile / Peppermint / Lemon Sky
+            </li>
+          </ul>
+            <img src="./images/ronnefeldt-450x143.png" alt="로네펠트">
+            <p>*1823년 독일에서 티하우스로 시작된 로네펠트는<br>
+              &nbsp;&nbsp;&nbsp;세계적으로 역사와 전통을 이어오고 있는 최고의 Tea 브랜드입니다.
+            </p>
+            <img src="./images/tea-set-300x120.jpg" alt="티 세트">
+            <p>*로네펠트 티 선물세트는 패밀리숍에서 구입 가능합니다.</p>
+        </div>
+        <div id="add_text2">
+          <p>*실제 제공되는 메뉴는 이미지와 다를 수 있습니다.</p>
+          <p>*일부 패밀리숍에 한하여 가격이 상이할 수 있습니다.</p>
+        </div>
+      </div>
+    </section>
+  </section>
+
+  <section id="allMenu4" class="hide">
+    <section id="menu4">
+      <div class="menu_nav">
+        <a href="#">TOP</a>
+      </div>
+
+      <div id="dessert">
+        <h1>디저트</h1>
+        <div class="dash2"></div>
+        <p><span>엄선된 재료로 작은 것 하나까지<br>직접 만들어 더욱 특별한<br>
+            커피명가만의 수제 디저트
+          </span></p>
+      </div>
+      <ul>
+        <li><a href="#"><img src="./image_menu/chocolate-1.png" alt="수제 생 초콜릿">
+            수재 생 초콜릿</a></li>
+        <li><a href="#"><img src="./image_menu/berrybing.jpg" alt="베리빙수">
+            베리빙수</a></li>
+        <li><a href="#"><img src="./image_menu/milkbing.jpg" alt="밀크빙수">
+            밀크빙수</a></li>
+      </ul>
+    </section>
+    <section class="inMenu" >
+      <div class="menu_list">
+        <ul>
+          <li>ㆍ수제 생 초콜릿</li>
+        </ul>
+
+        <ul>
+          <li>ㆍ밀크빙수<br>&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ베리빙수</li>
+          <li>ㆍ말차 빙수</li>
+          <li>ㆍ생과일팥빙수</li>
+        </ul>
+        <div id="add_text3">
+          <p>*선물용 초콜릿 포장은 각 패밀리숍에서 예약주문 가능합니다.</p>
+          <br>
+          <p>*실제 제공되는 메뉴는 이미지와 다를 수 있습니다.</p>
+          <p>*일부 패밀리숍에 한하여 가격이 상이할 수 있습니다.</p>
+        </div>
+      </div>
+    </section>
+  </section>
+
+  <section id="allMenu5" class="hide">
+    <section id="menu5">
+      <div class="menu_nav">
+        <a href="#">TOP</a>
+      </div>
+
+      <div id="bakery">
+        <h1>베이커리</h1>
+        <div class="dash2"></div>
+        <p><span>커피와 함께 오랫동안 사랑받은 수제 베이커리 메뉴<br>
+            모든 베이커리 메뉴는 커피명가 패밀리숍에서 정성껏 직접 만듭니다.
+          </span></p>
+      </div>
+      <ul>
+        <li><a href="#"><img src="./image_menu/dessert.png" alt="수제 단호박케이크">
+            수제 단호박케이크</a></li>
+        <li><a href="#"><img src="./image_menu/strawberry.jpg" alt="수제 딸기케이크">
+            수제 딸기케이크</a></li>
+        <li><a href="#"><img src="./image_menu/ham-and-cheese.jpg" alt="햄 치즈 샌드위치">
+            햄 치즈 샌드위치</a></li>
+        <li><a href="#"><img src="./image_menu/cup-tiramisu-1.png" alt="수제 컵티라미수">
+            수제 컵티라미수</a></li>
+        <li><a href="#"><img src="./image_menu/chocolate2-copy-1.png" alt="수제 가토쇼콜라">
+            수제 가토쇼콜라</a></li>
+        <li><a href="#"><img src="./image_menu/tomato.jpg" alt="토마토 모짜렐라 샌드위치">
+            토마토 모짜렐라 샌드위치</a></li>
+      </ul>
+    </section>
+    <section class="inMenu">
+      <div class="menu_list">
+        <ul>
+          <li>ㆍ수제 딸기 케이크<br> &nbsp;&nbsp;&nbsp;(season)</li>
+          <li class="blank1">ㆍ수제 단호박 케이크&nbsp;&nbsp;&nbsp;</li>
+          <li style="width: 230px;">ㆍ수제 바닐라 치즈케이크</li>
+          <li>ㆍ수제 가토 쇼콜라</li>
+          <li>ㆍ수제 컵 티라미수</li>
+        </ul>
+        <ul>
+          <li style="width: 230px;">ㆍ휘낭시에</li>
+          <li style="width: 230px;">ㆍ아몬드 쿠키</li>
+          <li>ㆍ피칸볼</li>
+        </ul>
+        <ul>
+          <li>ㆍ햄 치즈 샌드위치</li>
+          <li>ㆍ허니 브레드&nbsp;&nbsp;&nbsp;</li>
+          <li>ㆍ그릴드 파니니</li>
+          <li>ㆍ토마토 모짜렐라<br> &nbsp;&nbsp;&nbsp;샌드위치</li>
+        </ul>
+        <div id="add_text">
+          <p>*실제 제공되는 메뉴는 이미지와 다를 수 있습니다.</p>
+          <p>*일부 패밀리숍에 한하여 가격이 상이할 수 있습니다.</p>
+        </div>
+      </div>
+    </section>
+  </section>
+
+  <section id="allMenu6" class="hide">
+    <section id="menu6">
+      <div class="menu_nav">
+        <a href="#">TOP</a>
+      </div>
+
+      <div id="espresso">
+        <h1>MD</h1>
+        <div class="dash2"></div>
+        <p><span>소중한 분께 마음을 표현하는 특별한 선물<br>
+            커피명가만의 다양한 제품들을 만나보세요.
+          </span></p>
+      </div>
+      <ul>
+      </ul>
+    </section>
+    <section class="inMenu">
+      <div class="menu_list">
+        <ul>
+          <li>ㆍ커피나무</li>
+        </ul>
+      </div>
+    </section>
+  </section>
+
+  <footer id="main_footer">
+    <div id="ft_img">
+      <a href="./"><img src="./images/logo-myungga.jpg" alt="logo"></a>
+    </div>
+    <div id="footer_tt">
+      <ul id="mf_text1" class="mf_text">
+        <li>
+          <h3><a href="sub1_1.html">회사소개</a></h3>
+        </li>
+        <li>
+          <h3><a href="#">제휴/제안</a></h3>
+        </li>
+        <li>
+          <h3><a href="#">이용약관</a></h3>
+        </li>
+        <li>
+          <h3><a href="#"><strong>개인정보처리방침</strong></a></h3>
+        </li>
+      </ul>
+      <ul id="mf_text2" class="mf_text">
+        <li>
+          <p>(주)커피명가 대표자 : 안명규</p>
+        </li>
+        <li>
+          <p>개인정보관리책임 : 안명규</p>
+        </li>
+        <li>
+          <p>사업자등록번호 : 504-81-58075</p>
+        </li>
+      </ul>
+      <ul id="mf_text3" class="mf_text">
+        <li>
+          <p>통신판매업신고번호 : 제2009-대구중구-1940호 대구 중구 동덕로26길 104</p>
+        </li>
+      </ul>
+      <ul id="mf_text4" class="mf_text">
+        <li>
+          <p>문의 : 053-254-0892</p>
+        </li>
+        <li>
+          <p>admin@coffeemg.bizmeka.com</p>
+        </li>
+        <li>
+          <p>&copy; Coffee Myungga. All Rights Reserved</p>
+        </li>
+      </ul>
+      <!-- <ul id="mf_text5" class="mf_text">
 
   </ul> -->
-</div>
-  <!-- <h3><a href="sub1_1.html">회사소개</a> &nbsp;&nbsp; <a href="#">제휴/제안</a>  &nbsp;&nbsp; <a href="#"><strong>개인정보처리방침</strong></a> </h3>
+    </div>
+    <!-- <h3><a href="sub1_1.html">회사소개</a> &nbsp;&nbsp; <a href="#">제휴/제안</a>  &nbsp;&nbsp; <a href="#"><strong>개인정보처리방침</strong></a> </h3>
   <p>서울시 동작구 상도로 53길 65 &nbsp;&nbsp; (주)커피나무 대표자: 백지연 &nbsp;&nbsp; 개인정보보호책임자: 백승훈</p>
   <p>TEL: 1577-9173 &nbsp;&nbsp; FAX: 02-821-0744 &nbsp;&nbsp; 사업자등록번호: 108-86-14200 &nbsp;&nbsp; E-MAIL:info@coffeenamu.co.kr</p>
   <p>&copy; Coffee Namu. All Rights Reserved</p> -->
-</footer>
+  </footer>
 </body>
 
 </html>
