--- a/sub2_2.html
+++ b/sub2_2.html
@@ -132,7 +132,7 @@
 
       <div class="main_title_text">
         <h1>핸드드립 커피</h1>
-        <div class="dash1"></div>
+        <div class="dash2"></div>
         <p><span>'Farm to Cup'<br>
             커피명가 독점 농장에서 공급받은 신선한 그린 빈을<br>
             매일 로스팅 해 산지별 개성을 오롯이 담아 섬세하고<br>
@@ -337,7 +337,7 @@
           </ul>
             <img src="./images/ronnefeldt-450x143.png" alt="로네펠트">
             <p>*1823년 독일에서 티하우스로 시작된 로네펠트는<br>
-              &nbsp;&nbsp;&nbsp;세계적으로 역사와 전통을 이어오고 있는 최고의 Tea 브랜드입니다.
+              &nbsp;&nbsp;세계적으로 역사와 전통을 이어오고 있는<br>&nbsp;&nbsp;최고의 Tea 브랜드입니다.
             </p>
             <img src="./images/tea-set-300x120.jpg" alt="티 세트">
             <p>*로네펠트 티 선물세트는 패밀리숍에서 구입 가능합니다.</p>
@@ -356,7 +356,7 @@
         <a href="#">TOP</a>
       </div>
 
-      <div id="dessert">
+      <div class="main_title_text">
         <h1>디저트</h1>
         <div class="dash2"></div>
         <p><span>엄선된 재료로 작은 것 하나까지<br>직접 만들어 더욱 특별한<br>
@@ -377,15 +377,16 @@
         <ul>
           <li>ㆍ수제 생 초콜릿</li>
         </ul>
-
         <ul>
-          <li>ㆍ밀크빙수<br>&nbsp;&nbsp;&nbsp;</li>
-          <li>ㆍ베리빙수</li>
+          <li>ㆍ밀크 빙수</li>
+          <li>ㆍ베리 빙수</li>
+        </ul>
+        <ul>
           <li>ㆍ말차 빙수</li>
           <li>ㆍ생과일팥빙수</li>
         </ul>
         <div id="add_text3">
-          <p>*선물용 초콜릿 포장은 각 패밀리숍에서 예약주문 가능합니다.</p>
+          <p>*선물용 초콜릿 포장은<br>&nbsp;&nbsp;각 패밀리숍에서 예약주문 가능합니다.</p>
           <br>
           <p>*실제 제공되는 메뉴는 이미지와 다를 수 있습니다.</p>
           <p>*일부 패밀리숍에 한하여 가격이 상이할 수 있습니다.</p>
@@ -400,11 +401,12 @@
         <a href="#">TOP</a>
       </div>
 
-      <div id="bakery">
+      <div class="main_title_text">
         <h1>베이커리</h1>
         <div class="dash2"></div>
-        <p><span>커피와 함께 오랫동안 사랑받은 수제 베이커리 메뉴<br>
-            모든 베이커리 메뉴는 커피명가 패밀리숍에서 정성껏 직접 만듭니다.
+        <p><span>커피와 함께 오랫동안 사랑받아온<br>
+          모든 베이커리 메뉴들은<br>
+          커피명가 패밀리숍에서 정성껏 직접 만듭니다.
           </span></p>
       </div>
       <ul>
@@ -456,7 +458,7 @@
         <a href="#">TOP</a>
       </div>
 
-      <div id="espresso">
+      <div class="main_title_text">
         <h1>MD</h1>
         <div class="dash2"></div>
         <p><span>소중한 분께 마음을 표현하는 특별한 선물<br>
